--- a/.asf.yaml
+++ b/.asf.yaml
@@ -16,8 +16,8 @@
 # under the License.
 
 notifications:
-  commits:      commits@kafka.apache.org
-  issues:       jira@kafka.apache.org
+  commits: commits@kafka.apache.org
+  issues: jira@kafka.apache.org
   pullrequests: jira@kafka.apache.org
   jira_options: link label
 
@@ -25,28 +25,25 @@ notifications:
 # https://cwiki.apache.org/confluence/pages/viewpage.action?spaceKey=INFRA&title=Git+-+.asf.yaml+features#Git.asf.yamlfeatures-JenkinsPRwhitelisting
 jenkins:
   github_whitelist:
-    - FrankYang0529
-    - kamalcph
-    - apoorvmittal10
-    - lianetm
-    - brandboat
-    - kirktrue
-    - nizhikov
-    - OmniaGM
-    - dongnuo123
-    - frankvicky
-
-# This list allows you to triage pull requests. It can have a maximum of 10 people.
-# https://cwiki.apache.org/confluence/pages/viewpage.action?spaceKey=INFRA&title=Git+-+.asf.yaml+features#Git.asf.yamlfeatures-AssigningexternalcollaboratorswiththetriageroleonGitHub
+  - enothereska
+  - kamalcph
+  - FrankYang0529
+  - vamossagar12
+  - dongjinleekr
+  - philipnee
+  - nizhikov
+  - apoorvmittal10
+  - brandboat
+  - frankvicky
 github:
   collaborators:
-    - FrankYang0529
-    - kamalcph
-    - apoorvmittal10
-    - lianetm
-    - brandboat
-    - kirktrue
-    - nizhikov
-    - OmniaGM
-    - dongnuo123
-    - frankvicky
+  - enothereska
+  - kamalcph
+  - FrankYang0529
+  - vamossagar12
+  - dongjinleekr
+  - philipnee
+  - nizhikov
+  - apoorvmittal10
+  - brandboat
+  - frankvicky
